style(templates): Improve user accessibility and readability by fixing styling errors and adding ARIA labels

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,21 +75,6 @@ body {
     color: #EEEBD0;
 }
 
-.btn {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #ff5722;
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-.btn:hover {
-    background-color: #ff784e;
-}
-
 /* Navbar styles */
 .navbar {
     background-color: #0B0B0B;
@@ -141,9 +126,13 @@ body {
 
 /* Button styles */
 .btn {
+    display: inline-block;
     background-color: #CC2936;
-    color: #EEEBD0;
+    color: #FFFFCC;
+    text-decoration: none;
+    font-weight: bold;
     border: none;
+    border-radius: 5px;
     padding: 10px 20px;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
@@ -293,7 +282,7 @@ img {
     width: 250px; 
     height: 50px; 
     background-color: #CC2936; 
-    color: #EEEBD0; 
+    color: #FFFFCC; 
     border: none;
     padding: 10px 20px;
     cursor: pointer;
